<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="64dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/arrow"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:filterTouchesWhenObscured="false"
        android:textColor="@color/gray"
        android:fontFamily="@font/montserratregular"
        android:text="@string/login"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="41dp"
        android:textSize="17sp"
        android:fontFamily="@font/montserratregular"
        android:text="@string/emaill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textemail">

        <EditText
            android:drawableStart="@drawable/icon_mail"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:background="@drawable/button_shape"
            android:text="@null"
            android:inputType="textEmailAddress"
            tools:ignore="RtlSymmetry"
            android:autofillHints="emailAddress">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/katasandi"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserratregular" />

        <EditText
            android:drawableStart="@drawable/icon_lock"
            android:drawableEnd="@drawable/eye_invisible"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_shape"
            android:text="@null"
            android:inputType="textVisiblePassword"
            android:autofillHints="password">

        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="200dp"
            android:text="@string/loginn"
            android:textSize="25sp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserratregular"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
        </Button>
    </LinearLayout>


</RelativeLayout>

